bin/console/src/snapshots/chaos_console__cwd_prompt__tests__cwd_prompt_modal.snap
---
source: bin/xserver/src/cwd_prompt.rs
expression: terminal.backend()
---

Choose working directory to resume this session

  Session = latest cwd recorded in the resumed session                          
  Current = your current working directory

› 1. Use session directory (/Users/example/session)                             
  2. Use current directory (/Users/example/current)

  Press enter to continue
